@@ -195,13 +195,6 @@
                         <pluginFirstClassLoader>true</pluginFirstClassLoader>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <argLine>-XX:MaxPermSize=256m</argLine>
-                    </configuration>
-                </plugin>
             </plugins>
         </pluginManagement>
         <finalName>${project.artifactId}</finalName>
